Removed unused dependencies

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "client-app",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://liviusgrosu.github.io/personal-website-frontend",
   "type": "module",
   "scripts": {
+	"predeploy": "npm run build",
+	"deploy": "gh-pages -d build",
     "start": "vite",
     "dev": "vite",
     "build": "tsc && vite build",
